# smart-events-rust-terminal

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
src/: main.rs
src/models/: checkin.rs  heartbeat.rs  mod.rs
src/services/: apiclient.rs  cache.rs  get_mac.rs  getid.rs  heartbeat.rs  input.rs  mod.rs
terminal_app/: .gitignore  Cargo.toml
terminal_app/src/: main.rs
terminal_app/src/models/: checkin.rs
terminal_app/src/services/: cache.rs  heartbeat.rs  input.rs  mod.rs
