[package]
name = "terminal_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zmq = "0.10.0"
chrono = "0.4.23"
threadpool = "1.8.1"
mac_address = "1.1.4"
futures = { version = "0.3.25" }
futures-timer = { version ="3.0" }
rusqlite = { version = "0.28.0", features = ["bundled"] }
async-std = { version = "1.10", features = [ "attributes" ] }