[package]
name = "sick"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
chrono = "0.4.23"
threadpool = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3.25" }
futures-timer = { version ="3.0" }
rusqlite = { version = "0.28.0", features = ["bundled"] }
async-std = { version = "1.10", features = [ "attributes" ] }