[package]
name = "terminal_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mac_address = "1.1.4"
sqlx = { version = "0.6.2", features = [ "runtime-async-std-native-tls", "sqlite" ] }
async-std = { version = "1.10", features = [ "attributes" ] }
futures = { version = "0.3.25" }
futures-timer = { version ="3.0" }
zmq = "0.10.0"